Add Entities and set relations between them and add DbContext

--- a/TicketingSystemProject/App.Domain.Core/App.Domain.Core.csproj
+++ b/TicketingSystemProject/App.Domain.Core/App.Domain.Core.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Tickets\AppServices\" />
+    <Folder Include="Tickets\Data\" />
+    <Folder Include="Tickets\Services\" />
+    <Folder Include="Users\Data\" />
+    <Folder Include="Users\AppServices\" />
+    <Folder Include="Users\Services\" />
+  </ItemGroup>
+
 </Project>
