--- a/TicketingSystemProject/App.Domain.AppServices/App.Domain.AppServices.csproj
+++ b/TicketingSystemProject/App.Domain.AppServices/App.Domain.AppServices.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Tickets\" />
+    <Folder Include="Users\" />
+  </ItemGroup>
+
 </Project>
