--- a/TicketingSystemProject/App.EndPoints.MVC/appsettings.json
+++ b/TicketingSystemProject/App.EndPoints.MVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ALI95;Database=TicketingSystemDb;integrated security = true;TrustServerCertificate=True;Trusted_Connection=True"
+  }
 }
