Add Dtos to project , delete the Role entity and add IdentityDbContext , change type of primary keys of AspNetUser and AspNetRole tables , establish a relation between AspNetUser and AppUser entity , establish a one to one relationship between AspNetUser table and AspNetUserRole table

--- a/TicketingSystemProject/App.Domain.Core/App.Domain.Core.csproj
+++ b/TicketingSystemProject/App.Domain.Core/App.Domain.Core.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Tickets\AppServices\" />
-    <Folder Include="Tickets\Data\" />
-    <Folder Include="Tickets\Services\" />
+    <Folder Include="Tickets\AppServicesContracts\" />
+    <Folder Include="Tickets\Data\RepositoriesContract\" />
+    <Folder Include="Tickets\ServicesContracts\" />
     <Folder Include="Users\Data\" />
-    <Folder Include="Users\AppServices\" />
-    <Folder Include="Users\Services\" />
+    <Folder Include="Users\AppServicesContracts\" />
+    <Folder Include="Users\ServicesContracts\" />
   </ItemGroup>
 
 </Project>
