--- a/TicketingSystemProject/App.Infra.Data.Repos.Ef/App.Infra.Data.Repos.Ef.csproj
+++ b/TicketingSystemProject/App.Infra.Data.Repos.Ef/App.Infra.Data.Repos.Ef.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Users\" />
+    <Folder Include="Tickets\" />
+  </ItemGroup>
+
 </Project>
