--- a/TicketingSystemProject/App.Infra.Data.Repos.Ef/App.Infra.Data.Repos.Ef.csproj
+++ b/TicketingSystemProject/App.Infra.Data.Repos.Ef/App.Infra.Data.Repos.Ef.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Users\" />
-    <Folder Include="Tickets\" />
+    <ProjectReference Include="..\App.Domain.Core\App.Domain.Core.csproj" />
+    <ProjectReference Include="..\App.Infra.Data.Db.SqlServer.Ef\App.Infra.Data.Db.SqlServer.Ef.csproj" />
   </ItemGroup>
 
 </Project>
